--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,39 +1,35 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Admin</th>
-      <th>Sport</th>
-      <th>Ville</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Date</th>
-      <th>Addresse</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= event.admin.full_name %></td>
-        <td><%= event.sport.name %></td>
-        <td><%= event.city.name %></td>
-        <td><%= event.title %></td>
-        <td><%= event.description %></td>
-        <td><%= event.date %></td>
-        <td><%= event.full_address %></td>
-        <td><%= link_to 'Afficher', event %></td>
-        <td><%= link_to 'Editer', edit_event_path(event) %></td>
-        <td><%= link_to 'Supprimer', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
 <%= link_to 'New Event', new_event_path %>
+
+<div class="card">
+  <p class="card-title"> Fit Feat Sports Events </p>
+  <p class="card-icon"> <i class="fa-solid fa-bell"></i> </p> 
+  <div class="container-geoloc">
+    <div class="list-container">
+      <div class="container">
+        <h2> Les evenements autour de toi </h2>
+        <ul>
+        <% if @events%>
+          <% @events.each do |event| %>
+            <div class="row">
+              <div class="col-8">
+                <li class="event-link"> [<%=event.sport.name.capitalize%>] <%= link_to event.title, event_path(event) %>  qui se deroule le <%= event.date.strftime("%d-%m-%Y à %Hh%M")%>
+              </div>
+              <div class="col-4">
+                <% if find_participation(event,current_user)%>
+                  <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline" do %>
+                  <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer<%end%>
+                  </li>
+                  <%else%>
+                  <%=button_to event_participations_path(event),:class => "button primary" do %>
+                  <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
+                  </li>
+                <%end%>
+              </div>
+            </div>
+          <%end%> 
+        <%end%>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
