editing friends list and mapbox

--- a/app/assets/stylesheets/pages/connections/geoloc.scss
+++ b/app/assets/stylesheets/pages/connections/geoloc.scss
@@ -8,4 +8,10 @@
 
 .list-container {
    flex : 4;
+
+   .scrollable-list{
+      height: 300px; 
+      overflow:hidden; 
+      overflow-y:scroll
+   }
 }
