--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,35 +6,21 @@
       </div>
       <%= render 'users/notif-meteo/notif_meteo'%>
     <%else%>
-    <h1> Profil de <%= @user.first_name%></h1>
-        <div class="wrapper-not-meteo">
-          <div class="notification-card card">
-            <p>
-              <strong>First name:</strong>
-              <%= @user.first_name ? @user.first_name : 'Donnee non renseignée' %>
-            </p>
-            <p>
-              <strong>Last name:</strong>
-              <%= @user.last_name ? @user.last_name : 'Donnee non renseignée' %>
-            </p>
-          </div>
-          <div class="meteo-card card">
-            <p>
-              <strong>Description:</strong>
-              <%= @user.description ? @user.description : 'Donnee non renseignée' %>
-            </p>
-            <p>
-              <strong>Adresse:</strong>
-              <%= @user.address ? @user.address : 'Donnee non renseignée' %>
-            </p>
-            <p>
-              <strong>City:</strong>
-              <%= @user.city ? @user.city.name : 'Donnee non renseignée' %>
-            </p>
-          </div>
-        </div>
+      <%= render 'other_user_info'%>
     <%end%>
   <%if @user.sports.present?%>
     <%= render 'performance_usershow'%>
   <%end%>
+
+  <div class="card">
+  <p class="card-title"> Les prochaines evenements à venir pour <%= @user.full_name %> </p>
+  <p class="card-icon"> <i class="fa-solid fa-calendar-plus"></i></i> </p> 
+  <div class="container-geoloc">
+    <div class="list-container">
+      <div class="container">
+        <%= render partial: 'events/event_list', locals: {events: @user_events}%>
+      </div>
+    </div>
+  </div>
+
 </div>
