--- a/app/views/users/_other_user_show.html.erb
+++ b/app/views/users/_other_user_show.html.erb
@@ -7,8 +7,12 @@
     </div>
     <div class="user-primary-content">
       <h1> <%= @user.first_name ? @user.first_name : 'Donnee non renseignée' %> <%= @user.last_name ? @user.last_name : 'Donnee non renseignée' %></h1>
-      <p> <i class="fa-solid fa-align-left"></i> <%= @user.description ? @user.description : 'Aliquip duis voluptate nulla aute qui magna deserunt reprehenderit adipisicing nostrud.' %></p>
+      <p> <i class="fa-solid fa-align-left"></i> <%= @user.description ? @user.description : 'Pas de description' %></p>
+      <%if @user.is_friend_with?(current_user)%>
+      <p><strong> Vous etes amis, voici ces coordonnées pour aller vous entrainer ensemble :</strong></p>
       <p> <i class="fa-solid fa-location-dot"></i> <%= @user.address ? @user.address : 'Donnee non renseignée' %></p>
+      <p> <i class="fa-solid fa-at"></i> <%= @user.email ? @user.email : 'Donnee non renseignée' %></p>
+      <%end%>
     </div>
   </div>
 </div>
