edit event front

--- a/app/views/events/_top_edit_element.html.erb
+++ b/app/views/events/_top_edit_element.html.erb
@@ -1,7 +1,6 @@
-
 <div class="top-element">
         <div class="twins">
-          <h1 class="title"> Créer un événement</h1>
+          <h1 class="title"> Editer l'événement </h1>
           <div class="title-lign"></div>
         </div>  
         <hr>
