--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,8 +2,8 @@
 
    <%= render 'image' %>
   <div class="event-container-left form-container-right"> 
-      <%= render 'top_element' %>
+      <%= render 'top_create_element' %>
 
-      <%= render partial: 'form', locals:{ event: @event, cities: @cities, sports: @sports} %>
+      <%= render partial: 'form_create', locals:{ event: @event, cities: @cities, sports: @sports} %>
    </div>
 </div>
