--- a/app/assets/stylesheets/atoms/navbar.scss
+++ b/app/assets/stylesheets/atoms/navbar.scss
@@ -10,6 +10,34 @@
    left: 0px;
 }
 
+.rond {
+   display: flex;
+   justify-content: center;
+   align-items:center;
+   width: 50px;
+   height: 50px;
+   border-radius: 50%;
+   overflow: hidden;
+   margin-right: 15px;
+   border: 3px solid rgb(230, 109, 109);
+   font-size:1.6rem;
+ }
+
+ .rond-small {
+   display: flex;
+   justify-content: center;
+   align-items:center;
+   width: 30px;
+   height: 30px;
+   border-radius: 50%;
+   overflow: hidden;
+   margin-right: 5px;
+   border: 2px solid rgb(230, 109, 109);
+   font-size:1.6rem;
+   vertical-align: middle;
+
+ }
+
 .ghost-div{
    min-width: 290px;
    height :100vh;
@@ -88,9 +116,6 @@
    margin-bottom: 30px;
 }
 
-.user-name img{
-   margin-right: 20px;
-}
 .user-name span{
    font-family: var(--black-font);
    font-size: 1.5rem;
