--- a/app/views/connections/_geoloc.html.erb
+++ b/app/views/connections/_geoloc.html.erb
@@ -9,7 +9,16 @@
             <ul class="scrollable-list">
             <% @markers.each do |marker| %>
                <li> 
+               <div class="d-flex">
+               <div class="rond-small ml-2">
+                  <%if User.find(marker[:user_id]).avatar.attached?%>
+                    <%= image_tag User.find(marker[:user_id]).avatar, alt: 'avatar', :style => "width:50px;" %>
+                    <%else%>
+                    <%= image_tag "avatar.png" %>
+                    <%end%>
+                  </div>
                   <%= link_to marker[:name], user_path(marker[:user_id]),  class:"user-link" %> 
+                  </div>
                </li>
           <%end%>
           </ul>
