--- a/app/assets/stylesheets/pages/user/new_event.scss
+++ b/app/assets/stylesheets/pages/user/new_event.scss
@@ -1,31 +1,26 @@
 .event-container{
-   flex-direction: row-reverse;
+   flex-direction: column;
 
    .top-element{
-      position: relative;
-      top: 20px;
-      right: 160px;
-
-      .title-lign{
+        .title-lign{
          width: 370px;
       }
-
-      
    }
 }
-         .event-img{
-         background: url(https://images.unsplash.com/photo-1608138278561-4b1ade407411?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80) !important;
-         background-repeat: no-repeat !important;
-         background-size: 100% !important;
-         background-position: 25% 70% !important; 
-         }
+   .event-img{
+      background: url(https://images.unsplash.com/photo-1517637633369-e4cc28755e01?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80) !important;
+      background-repeat: no-repeat !important;
+      background-size: 100% !important;
+      background-position: 25% 70% !important; 
+      height: 600px !important;
+   }
 
    .event-container-left{
       justify-content: flex-start;
 
       .event-form-container{
          position: relative;
-         top: 150px;
+         top: 70px;
       }
 
       .together{
