--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,41 +1,54 @@
-<p id="notice"><%= notice %></p>
+<div class="show-event-container form-container">
 
-<p>
-  <strong>Admin:</strong>
-  <%= @event.admin.full_name %>
-</p>
+  <div class="event-left-container form-container-left">
+    <div class="img-show img-fluid"></div>
+  </div>
 
-<p>
-  <strong>Sport:</strong>
-  <%= @event.sport.name %>
-</p>
+  <div class="right-container right-content">
+    <div class="top-element">
+        <div class="twins">
+          <h1 class="title"> <strong>Title: </strong><%= @event.title %></h1>
+          <div class="title-lign"></div>
+        </div>  
+  </div>
 
-<p>
-  <strong>City:</strong>
-  <%= @event.city.name %>
-</p>
+    <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @event.title %>
-</p>
+<ul>
+    
+    <li>
+      <strong>Admin:</strong>
+      <%= @event.admin.full_name %>
+    </li>
 
-<p>
-  <strong>Description:</strong>
-  <%= @event.description %>
-</p>
+    <li>
+      <strong>Sport: </strong>
+      <%= @event.sport.name %>
+    </li>
 
-<p>
-  <strong>Date:</strong>
-  <%= @event.date %>
-</p>
+   <li>
+      <strong>City: </strong>
+      <%= @event.city.name %>
+    </li>
 
-<p>
-  <strong>Address:</strong>
-  <%= @event.address %>
-</p>
+    <li>
+      <strong>Description: </strong>
+      <%= @event.description %>
+    </li>
 
+    <li>
+      <strong>Date: </strong>
+      <%= @event.date %>
+    </li>
 
+    <li>
+      <strong>Address: </strong>
+      <%= @event.address %>
+    </li>
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+</ul>
+
+    <%= link_to 'Edit', edit_event_path(@event) %> |
+    <%= link_to 'Back', events_path %>
+  </div>
+</div>
