--- a/app/views/events/_event_list.html.erb
+++ b/app/views/events/_event_list.html.erb
@@ -1,12 +1,27 @@
+<div class="container-geoloc">
+  <div class="list-container">
+    <div class="container">
+          <ul class="event-items">
+            <% if events%>
+              <% events.each do |event| %>
+                <div class="event-item">
+                  <div class="event-date-container"> 
+                     <p class="event-date-day"> <%= event.date.strftime("%d")%> </p>
+                     <p> <%= event.date.strftime("%B") %>  </p>
+                  </div>
+                  <div class="event-content"> 
+                    <h3> <%= link_to event.title, event_path(event) %>  </h3>
+                    <div class="event-partipants"> 0 partipants</div>
+                    <%= event.date.strftime("%Hh%M")%>
+                  </div>
 
-        <ul>
-        <% if events%>
-          <% events.each do |event| %>
-            <div class="row">
-              <div class="col-12">
-                <li class="event-link"> [<%=event.sport.name.capitalize%>] <%= link_to event.title, event_path(event) %>  qui se deroule le <%= event.date.strftime("%d-%m-%Y à %Hh%M")%>
-              </div>
-            </div>
-          <%end%> 
-        <%end%>
-        </ul>
+                  <div class="event-sport-tag"> <%=event.sport.name%> </div>
+                </div>
+              <%end%> 
+            <%end%>
+          </ul>
+    </div>
+  </div>
+</div>
+  
+
