--- a/app/views/events/_events_around.html.erb
+++ b/app/views/events/_events_around.html.erb
@@ -4,28 +4,40 @@
   <div class="container-geoloc">
     <div class="list-container">
       <div class="container">
-        <h2> Les evenements autour de toi : </h2>
+        <h2> Les evenements autour de toi (scroll)</h2>
+        <br>
         <ul>
         <% if @events%>
-          <% @events.each do |event| %>
-            <div class="row">
-              <div class="col-8">
-                <li class="event-link"> [<%=event.sport.name.capitalize%>] <%= link_to event.title, event_path(event) %>  qui se deroule le <%= event.date.strftime("%d-%m-%Y à %Hh%M")%>
-              </div>
-              <div class="col-4">
-                <% if find_participation(event,current_user)%>
-                  <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline" do %>
-                  <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer<%end%>
-                  </li>
-                  <%else%>
-                  <%=button_to event_participations_path(event),:class => "button primary" do %>
-                  <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
-                  </li>
-                <%end%>
-              </div>
-            </div>
-          <%end%> 
-        <%end%>
+          <ul class="event-items scrollable-list">
+              <% @events.each do |event| %>
+                <div class="event-item">
+                  <div class="event-date-container"> 
+                     <p class="event-date-day"> <%= event.date.strftime("%d")%> </p>
+                     <p> <%= event.date.strftime("%B") %>  </p>
+                  </div>
+                  <div class="event-content"> 
+                    <h3> <%= link_to event.title, event_path(event) %>  </h3>
+                    <div class="event-partipants"> partipants</div>
+                    <%= event.date.strftime("%Hh%M")%>
+                  </div>
+                  <div class="button-participate">
+                    <% if find_participation(event,current_user)%>
+                      <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline" do %>
+                      <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer<%end%>
+                      </li>
+                      <%else%>
+                      <%=button_to event_participations_path(event),:class => "button primary" do %>
+                      <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
+                      </li>
+                    <%end%>
+                  </div>
+
+
+                  <div class="event-sport-tag"> <%=event.sport.name%> </div>
+                </div>
+              <%end%> 
+            <%end%>
+          </ul>
         </ul>
       </div>
     </div>
