show event front

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,32 +18,32 @@
     
     <li>
       <strong>Admin:</strong>
-      <%= @event.admin.full_name %>
+      <p><%= @event.admin.full_name %></p>
     </li>
 
     <li>
       <strong>Sport: </strong>
-      <%= @event.sport.name %>
+      <p><%= @event.sport.name %></p>
     </li>
 
    <li>
       <strong>City: </strong>
-      <%= @event.city.name %>
+      <p><%= @event.city.name %></p>
     </li>
 
     <li>
       <strong>Description: </strong>
-      <%= @event.description %>
+      <p><%= @event.description %></p>
     </li>
 
     <li>
       <strong>Date: </strong>
-      <%= @event.date %>
+     <p><%= @event.date %></p> 
     </li>
 
     <li>
       <strong>Address: </strong>
-      <%= @event.address %>
+     <p><%= @event.address %></p> 
     </li>
 
 </ul>
