--- a/app/assets/stylesheets/pages/user/show_event.scss
+++ b/app/assets/stylesheets/pages/user/show_event.scss
@@ -4,9 +4,9 @@
 
    ul{
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-evenly;
+      justify-content: space-between;
    }
 
    li{
@@ -15,7 +15,12 @@
       border: 10px solid white;
       border-radius: 5px;
       padding: auto;
+      width: 230px;
+      padding: 10px;
     
+      p{
+         padding-left: 10px;
+      }
    }
 }
 
